add new key CL_DV_TD_child_lock_tip

--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "kun ## on @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Syötä kaupunki…",
+    "enter_city_key": "Etsi kaupunki",
     "add_key": "Lisää",
     "select_logic_relation_ship": "Valitse looginen suhde",
     "no_scene_key": "ei kohtauksia",
@@ -4003,5 +4003,22 @@
     "CL_DV_OV_check_to_confirm": "Tarkista uuni vahvistaaksesi.",
     "CL_CF_CO_buy": "Ostaa",
     "CL_CF_CS_window_ac_step_2": "Paina “connect”-painiketta ja pidä sitä painettuna noin 6 sekuntia tai suuntaa kaukosäädin vastaanottimeen ja paina “swing”-painiketta 6 kertaa, kunnes näytössä näkyy “77” tai WiFi-valo alkaa vilkkua.",
-    "CL_DV_OV_default_cooking_intensity": "OLETUSKYPSENNYSINTENSITEETTI"
+    "CL_DV_OV_default_cooking_intensity": "OLETUSKYPSENNYSINTENSITEETTI",
+    "CL_DV_HOB_residual_heat_title_pop": "Jäännöslämpö",
+    "CL_DV_HOB_residual_heat_content_pop": "Keittoalue on edelleen kuuma. Varo koskettamasta kuumaa keittoaluetta tai laittamasta sen päälle lämpöherkkiä esineitä.",
+    "CL_DV_HOB_hood_mode_setting": "Huputilan asetukset",
+    "CL_DV_HOB_refresh_mode_setting": "Päivitä tilan asetukset",
+    "CL_DV_HOB_grease_filter_profile": "Rasvasuodattimen profiilivaihtoehdot",
+    "CL_DV_HOB_hood_mode_setting_content": "Aseta liesituulettimen tila. Kun liesituuletin on automaattitilassa, se käynnistyy heti, kun kypsennysprosessi alkaa.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Jos automaattitila on pois päältä, tila on manuaalinen.",
+    "CL_DV_HOB_automatic_mode": "Automaattinen tila",
+    "CL_DV_HOB_refresh_setting_hint": "Jos virkistystila on päällä, laite alkaa automaattisesti käyttää Refresh-tilaa, kun liesituuletin on aktiivinen.",
+    "CL_DV_HOB_grease_filter_profile_content": "Aseta rasvasuodattimen pitkäikäisyys. \n\n P1:tä käytetään pääasiassa keittämiseen ja kevyeen paistamiseen. P2:ta käytetään tasapainoiseen keittämiseen ja keskimääräiseen paistamiseen. P3:ta käytetään raskaaseen paistamiseen.",
+    "CL_DV_HOB_hood_mode_manual": "Manuaalinen",
+    "CL_DV_HOB_remove_accessory_content": "Haluatko varmasti poistaa tämän lisävarusteen?",
+    "CL_DV_HOB_remove_accessory_tips": "kun poistat lisävarusteen, et enää saa siihen laiteohjelmistopäivityksiä.",
+    "CL_DV_HOB_clean_filter": "OLETKO PUHDISTAnut SUODATIN?",
+    "CL_DV_HOB_clean_filter_content": "Nollaa ajastin suodattimen puhdistamisen jälkeen.",
+    "CL_DV_HOB_more_update": "xx lisää päivityksiä",
+    "CL_DV_TD_child_lock_tip": "Lapsilukko poistaa käytöstä laitteen ohjauspaneelin painikkeet estääkseen lapsia käynnistämästä tai vaihtamasta pyörää vahingossa. "
 }
