--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "quand ## est @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Entrez la ville…",
+    "enter_city_key": "Recherchez la ville",
     "add_key": "Ajouter",
     "select_logic_relation_ship": "Sélectionnez la relation logique",
     "no_scene_key": "pas de scène",
@@ -4003,5 +4003,22 @@
     "CL_DV_OV_check_to_confirm": "Vérifiez le four pour confirmer.",
     "CL_CF_CO_buy": "Acheter",
     "CL_CF_CS_window_ac_step_2": "Appuyez sur le bouton « Connect » et maintenez-le enfoncé pendant environ 6 secondes, ou dirigez la télécommande vers le récepteur et appuyez 6 fois sur le bouton « Swing », jusqu'à ce que l'écran affiche « 77 » ou que le voyant WiFi commence à clignoter.",
-    "CL_DV_OV_default_cooking_intensity": "INTENSITÉ DE CUISSON PAR DÉFAUT"
+    "CL_DV_OV_default_cooking_intensity": "INTENSITÉ DE CUISSON PAR DÉFAUT",
+    "CL_DV_HOB_residual_heat_title_pop": "Chaleur résiduelle",
+    "CL_DV_HOB_residual_heat_content_pop": "La zone de cuisson est encore chaude. Veillez à ne pas toucher la zone de cuisson chaude ni à y poser des objets sensibles à la chaleur.",
+    "CL_DV_HOB_hood_mode_setting": "Paramètres du mode capot",
+    "CL_DV_HOB_refresh_mode_setting": "Paramètres du mode de rafraîchissement",
+    "CL_DV_HOB_grease_filter_profile": "Options de profil de filtre à graisse",
+    "CL_DV_HOB_hood_mode_setting_content": "Réglez le mode de la hotte. Lorsque la hotte est en mode automatique, elle démarre dès que le processus de cuisson commence.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Si le mode automatique est désactivé, le mode sera manuel.",
+    "CL_DV_HOB_automatic_mode": "Mode automatique",
+    "CL_DV_HOB_refresh_setting_hint": "Si le mode Rafraîchissement est activé, l'appareil démarrera automatiquement en utilisant le mode Rafraîchissement lorsque la hotte est active.",
+    "CL_DV_HOB_grease_filter_profile_content": "Réglez la longévité du filtre à graisse. \n\n Le P1 est principalement utilisé pour l'ébullition et la friture légère. Le P2 est utilisé pour l'ébullition équilibrée et la friture moyenne. Le P3 est utilisé pour la friture lourde.",
+    "CL_DV_HOB_hood_mode_manual": "Manuel",
+    "CL_DV_HOB_remove_accessory_content": "Etes-vous sûr de vouloir supprimer cet accessoire ?",
+    "CL_DV_HOB_remove_accessory_tips": "lorsque vous retirez votre accessoire, vous ne recevrez plus de mises à jour du firmware pour celui-ci.",
+    "CL_DV_HOB_clean_filter": "AVEZ-VOUS NETTOYÉ LE FILTRE?",
+    "CL_DV_HOB_clean_filter_content": "Réinitialisez la minuterie après avoir nettoyé le filtre.",
+    "CL_DV_HOB_more_update": "xx plus de mise à jour",
+    "CL_DV_TD_child_lock_tip": "Le verrouillage enfant désactive les boutons du panneau de commande de l'appareil pour empêcher les enfants de démarrer ou de modifier accidentellement un cycle. "
 }
