--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "כאשר ## הוא @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "הזן עיר…",
+    "enter_city_key": "חפש עיר",
     "add_key": "הוסף",
     "select_logic_relation_ship": "בחר יחס לוגי",
     "no_scene_key": "אין סצנה",
@@ -4003,5 +4003,22 @@
     "CL_DV_OV_check_to_confirm": "בדוק את התנור כדי לאשר.",
     "CL_CF_CO_buy": "לִקְנוֹת",
     "CL_CF_CS_window_ac_step_2": "לחץ והחזק את כפתור \"התחבר\" למשך כ-6 שניות, או כוון את השלט הרחוק אל המקלט ולחץ על כפתור \"הנדנדה\" 6 פעמים, עד שהתצוגה תראה \"77\" או שנורית ה-WiFi תתחיל להבהב.",
-    "CL_DV_OV_default_cooking_intensity": "עוצמת בישול ברירת מחדל"
+    "CL_DV_OV_default_cooking_intensity": "עוצמת בישול ברירת מחדל",
+    "CL_DV_HOB_residual_heat_title_pop": "חום שיורי",
+    "CL_DV_HOB_residual_heat_content_pop": "אזור הבישול עדיין חם. היזהר לא לגעת באזור הבישול החם או להניח עליו פריטים רגישים לחום.",
+    "CL_DV_HOB_hood_mode_setting": "הגדרות מצב מכסה המנוע",
+    "CL_DV_HOB_refresh_mode_setting": "הגדרות מצב רענון",
+    "CL_DV_HOB_grease_filter_profile": "אפשרויות פרופיל מסנן שומנים",
+    "CL_DV_HOB_hood_mode_setting_content": "הגדר את מצב מכסה המנוע. כאשר מכסה המנוע במצב אוטומטי, הוא יתחיל ברגע שתהליך הבישול יתחיל.",
+    "CL_DV_HOB_hood_mode_setting_hint": "אם המצב האוטומטי כבוי, המצב יהיה ידני.",
+    "CL_DV_HOB_automatic_mode": "מצב אוטומטי",
+    "CL_DV_HOB_refresh_setting_hint": "אם מצב הרענון מופעל, המכשיר יתחיל להשתמש במצב רענון אוטומטית כאשר מכסה המנוע פעיל.",
+    "CL_DV_HOB_grease_filter_profile_content": "הגדר את אורך החיים של מסנן השומן. \n\n P1 משמש בעיקר להרתחה ולטיגון קל. P2 משמש להרתחה מאוזנת ולטיגון ממוצע. P3 משמש לטיגון כבד.",
+    "CL_DV_HOB_hood_mode_manual": "יָדָנִי",
+    "CL_DV_HOB_remove_accessory_content": "האם אתה בטוח שברצונך להסיר את האביזר הזה?",
+    "CL_DV_HOB_remove_accessory_tips": "כאשר תסיר את האביזר שלך, לא תקבל עוד עדכוני קושחה עבורו.",
+    "CL_DV_HOB_clean_filter": "האם ניקית את המסנן?",
+    "CL_DV_HOB_clean_filter_content": "אפס את הטיימר לאחר שניקת את המסנן.",
+    "CL_DV_HOB_more_update": "xx עדכון נוסף",
+    "CL_DV_TD_child_lock_tip": "נעילת ילדים משביתה את הכפתורים בלוח הבקרה של המכשיר כדי למנוע מילדים להתחיל או לשנות בטעות מחזור. "
 }
