--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "ketika ## adalah @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Masukkan kota…",
+    "enter_city_key": "Cari kota",
     "add_key": "Tambah",
     "select_logic_relation_ship": "Pilih hubungan logika",
     "no_scene_key": "tidak ada adegan",
@@ -4003,5 +4003,22 @@
     "CL_DV_OV_check_to_confirm": "Periksa oven untuk mengonfirmasi.",
     "CL_CF_CO_buy": "Membeli",
     "CL_CF_CS_window_ac_step_2": "Tekan dan tahan tombol “connect” selama sekitar 6 detik, atau arahkan remote kontrol ke penerima dan tekan tombol “swing” 6 kali, hingga layar menunjukkan “77” atau lampu WiFi mulai berkedip.",
-    "CL_DV_OV_default_cooking_intensity": "INTENSITAS MEMASAK DEFAULT"
+    "CL_DV_OV_default_cooking_intensity": "INTENSITAS MEMASAK DEFAULT",
+    "CL_DV_HOB_residual_heat_title_pop": "Panas sisa",
+    "CL_DV_HOB_residual_heat_content_pop": "Zona memasak masih panas. Berhati-hatilah untuk tidak menyentuh zona memasak yang panas atau meletakkan benda yang sensitif terhadap panas di atasnya.",
+    "CL_DV_HOB_hood_mode_setting": "Pengaturan mode kap mesin",
+    "CL_DV_HOB_refresh_mode_setting": "Pengaturan mode penyegaran",
+    "CL_DV_HOB_grease_filter_profile": "Opsi profil filter gemuk",
+    "CL_DV_HOB_hood_mode_setting_content": "Atur mode penghisap asap. Jika penghisap asap dalam mode otomatis, penghisap asap akan menyala segera setelah proses memasak dimulai.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Jika mode otomatis mati, mode akan menjadi manual.",
+    "CL_DV_HOB_automatic_mode": "Mode otomatis",
+    "CL_DV_HOB_refresh_setting_hint": "Jika mode penyegaran aktif, peralatan akan secara otomatis mulai menggunakan mode Penyegaran saat kap aktif.",
+    "CL_DV_HOB_grease_filter_profile_content": "Mengatur umur filter minyak. \n\n P1 terutama digunakan untuk merebus dan menggoreng ringan. P2 digunakan untuk merebus seimbang dan menggoreng sedang. P3 digunakan untuk menggoreng berat.",
+    "CL_DV_HOB_hood_mode_manual": "Buku petunjuk",
+    "CL_DV_HOB_remove_accessory_content": "Apakah Anda yakin ingin menghapus aksesori ini?",
+    "CL_DV_HOB_remove_accessory_tips": "bila Anda melepas aksesori tersebut, Anda tidak akan lagi menerima pembaruan firmware untuk aksesori tersebut.",
+    "CL_DV_HOB_clean_filter": "SUDAHKAH ANDA MEMBERSIHKAN FILTER?",
+    "CL_DV_HOB_clean_filter_content": "Setel ulang pengatur waktu setelah Anda membersihkan filter.",
+    "CL_DV_HOB_more_update": "xx pembaruan lebih lanjut",
+    "CL_DV_TD_child_lock_tip": "Kunci anak menonaktifkan tombol pada panel kontrol alat untuk mencegah anak-anak menyalakan atau mengubah siklus secara tidak sengaja. "
 }
