--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "når ## er @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Skriv inn by…",
+    "enter_city_key": "Søk by",
     "add_key": "Legg til",
     "select_logic_relation_ship": "Velg logisk forhold",
     "no_scene_key": "ingen scene",
@@ -4003,5 +4003,22 @@
     "CL_DV_OV_check_to_confirm": "Sjekk ovnen for å bekrefte.",
     "CL_CF_CO_buy": "Kjøpe",
     "CL_CF_CS_window_ac_step_2": "Trykk og hold \"connect\"-knappen i ca. 6 sekunder, eller rett fjernkontrollen mot mottakeren og trykk på \"swing\"-knappen 6 ganger, til displayet viser \"77\" eller WiFi-lyset begynner å blinke.",
-    "CL_DV_OV_default_cooking_intensity": "STANDARD TILBEREDNINGSINTENSITET"
+    "CL_DV_OV_default_cooking_intensity": "STANDARD TILBEREDNINGSINTENSITET",
+    "CL_DV_HOB_residual_heat_title_pop": "Restvarme",
+    "CL_DV_HOB_residual_heat_content_pop": "Kokesonen er fortsatt varm. Vær forsiktig så du ikke berører den varme kokesonen eller plasserer varmefølsomme gjenstander på den.",
+    "CL_DV_HOB_hood_mode_setting": "Innstillinger for hettemodus",
+    "CL_DV_HOB_refresh_mode_setting": "Innstillinger for oppdateringsmodus",
+    "CL_DV_HOB_grease_filter_profile": "Alternativer for fettfilterprofil",
+    "CL_DV_HOB_hood_mode_setting_content": "Still inn modus for panseret. Når ventilatoren er i automatisk modus, vil den starte så snart tilberedningsprosessen starter.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Hvis den automatiske modusen er av, vil modusen være manuell.",
+    "CL_DV_HOB_automatic_mode": "Automatisk modus",
+    "CL_DV_HOB_refresh_setting_hint": "Hvis oppdateringsmodus er på, vil apparatet automatisk begynne å bruke oppdateringsmodus når ventilatoren er aktiv.",
+    "CL_DV_HOB_grease_filter_profile_content": "Still inn levetiden til fettfilteret. \n\n P1 brukes hovedsakelig til koking og lett steking. P2 brukes til balansert koking og gjennomsnittssteking. P3 brukes til kraftig steking.",
+    "CL_DV_HOB_hood_mode_manual": "Håndbok",
+    "CL_DV_HOB_remove_accessory_content": "Er du sikker på at du vil fjerne dette tilbehøret?",
+    "CL_DV_HOB_remove_accessory_tips": "når du fjerner tilbehøret, vil du ikke lenger motta fastvareoppdateringer for det.",
+    "CL_DV_HOB_clean_filter": "HAR DU RENGJET FILTERET?",
+    "CL_DV_HOB_clean_filter_content": "Tilbakestill timeren etter at du har renset filteret.",
+    "CL_DV_HOB_more_update": "xx mer oppdatering",
+    "CL_DV_TD_child_lock_tip": "Barnesikring deaktiverer knappene på apparatets kontrollpanel for å forhindre at barn starter eller endrer en syklus ved et uhell. "
 }
