--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "keď ## je @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Zadajte mesto…",
+    "enter_city_key": "Vyhľadať mesto",
     "add_key": "Pridať",
     "select_logic_relation_ship": "Vyberte logický vzťah",
     "no_scene_key": "žiadna scéna",
@@ -4003,5 +4003,22 @@
     "CL_DV_OV_check_to_confirm": "Skontrolujte rúru a potvrďte.",
     "CL_CF_CO_buy": "Kúpiť",
     "CL_CF_CS_window_ac_step_2": "Stlačte a podržte tlačidlo „connect“ na približne 6 sekúnd alebo namierte diaľkový ovládač na prijímač a stlačte 6-krát tlačidlo „swing“, kým sa na displeji nezobrazí „77“ alebo kým nezačne blikať kontrolka WiFi.",
-    "CL_DV_OV_default_cooking_intensity": "PREDNASTAVENÁ INTENZITA VARENIA"
+    "CL_DV_OV_default_cooking_intensity": "PREDNASTAVENÁ INTENZITA VARENIA",
+    "CL_DV_HOB_residual_heat_title_pop": "Zvyškové teplo",
+    "CL_DV_HOB_residual_heat_content_pop": "Varná zóna je stále horúca. Dávajte pozor, aby ste sa nedotkli horúcej varnej zóny a nepokladali na ňu žiadne predmety citlivé na teplo.",
+    "CL_DV_HOB_hood_mode_setting": "Nastavenia režimu kapucne",
+    "CL_DV_HOB_refresh_mode_setting": "Nastavenia režimu obnovenia",
+    "CL_DV_HOB_grease_filter_profile": "Možnosti profilu tukového filtra",
+    "CL_DV_HOB_hood_mode_setting_content": "Nastavte režim odsávača pár. Keď je odsávač pár v automatickom režime, spustí sa hneď po spustení procesu varenia.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Ak je automatický režim vypnutý, režim bude manuálny.",
+    "CL_DV_HOB_automatic_mode": "Automatický režim",
+    "CL_DV_HOB_refresh_setting_hint": "Ak je zapnutý režim obnovenia, spotrebič začne automaticky používať režim obnovenia, keď je digestor aktívny.",
+    "CL_DV_HOB_grease_filter_profile_content": "Nastavte životnosť tukového filtra. \n\n P1 sa používa hlavne na varenie a ľahké vyprážanie. P2 sa používa na vyvážené varenie a priemerné vyprážanie. P3 sa používa na silné vyprážanie.",
+    "CL_DV_HOB_hood_mode_manual": "manuál",
+    "CL_DV_HOB_remove_accessory_content": "Naozaj chcete odstrániť toto príslušenstvo?",
+    "CL_DV_HOB_remove_accessory_tips": "po odstránení príslušenstva už nebudete dostávať aktualizácie firmvéru.",
+    "CL_DV_HOB_clean_filter": "VYČISTIL STE FILTER?",
+    "CL_DV_HOB_clean_filter_content": "Po vyčistení filtra resetujte časovač.",
+    "CL_DV_HOB_more_update": "xx ďalšia aktualizácia",
+    "CL_DV_TD_child_lock_tip": "Detská poistka deaktivuje tlačidlá na ovládacom paneli spotrebiča, aby deti nemohli náhodne spustiť alebo zmeniť cyklus. "
 }
