--- a/language/i18n_zh_CN.json
+++ b/language/i18n_zh_CN.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "当 ## 是 @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "输入城市…",
+    "enter_city_key": "搜索城市",
     "add_key": "添加",
     "select_logic_relation_ship": "选择逻辑关系",
     "no_scene_key": "无场景",
@@ -4003,5 +4003,22 @@
     "CL_DV_OV_check_to_confirm": "检查烤箱来确认。",
     "CL_CF_CO_buy": "买",
     "CL_CF_CS_window_ac_step_2": "长按“连接”按钮约6秒钟，或将遥控器对准接收器，按“摆动”按钮6次，直到显示屏显示“77”或WiFi灯开始闪烁。",
-    "CL_DV_OV_default_cooking_intensity": "默认烹饪强度"
+    "CL_DV_OV_default_cooking_intensity": "默认烹饪强度",
+    "CL_DV_HOB_residual_heat_title_pop": "余热",
+    "CL_DV_HOB_residual_heat_content_pop": "烹饪区仍然很热。注意不要触摸热的烹饪区或在上面放置任何热敏感物品。",
+    "CL_DV_HOB_hood_mode_setting": "抽油烟机模式设置",
+    "CL_DV_HOB_refresh_mode_setting": "刷新模式设置",
+    "CL_DV_HOB_grease_filter_profile": "油脂过滤器配置选项",
+    "CL_DV_HOB_hood_mode_setting_content": "设置抽油烟机的模式。当抽油烟机处于自动模式时，烹饪过程开始时抽油烟机就会启动。",
+    "CL_DV_HOB_hood_mode_setting_hint": "如果自动模式关闭，则模式将为手动。",
+    "CL_DV_HOB_automatic_mode": "自动模式",
+    "CL_DV_HOB_refresh_setting_hint": "如果刷新模式已打开，则当抽油烟机处于活动状态时，设备将自动开始使用刷新模式。",
+    "CL_DV_HOB_grease_filter_profile_content": "设定油脂过滤器的使用寿命。 \n\n P1主要用于煮和轻煎，P2用于均衡煮和中度煎，P3用于重煎。",
+    "CL_DV_HOB_hood_mode_manual": "手动的",
+    "CL_DV_HOB_remove_accessory_content": "您确实要移除此配件吗？",
+    "CL_DV_HOB_remove_accessory_tips": "当您移除配件时，您将不再收到该配件的固件更新。",
+    "CL_DV_HOB_clean_filter": "您清理过过滤器吗？",
+    "CL_DV_HOB_clean_filter_content": "清洁过滤器后，重置计时器。",
+    "CL_DV_HOB_more_update": "更多更新",
+    "CL_DV_TD_child_lock_tip": "儿童锁可禁用设备控制面板上的按钮，以防止儿童意外启动或更改循环。 "
 }
