--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "kdy ## je @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Zadejte město…",
+    "enter_city_key": "Vyhledejte město",
     "add_key": "Přidat",
     "select_logic_relation_ship": "Vyberte logický vztah",
     "no_scene_key": "žádná scéna",
@@ -4003,5 +4003,22 @@
     "CL_DV_OV_check_to_confirm": "Zkontrolujte troubu a potvrďte.",
     "CL_CF_CO_buy": "Nakoupit",
     "CL_CF_CS_window_ac_step_2": "Stiskněte a podržte tlačítko „připojit“ po dobu přibližně 6 sekund nebo namiřte dálkový ovladač na přijímač a stiskněte 6krát tlačítko „swing“, dokud se na displeji nezobrazí „77“ nebo nezačne blikat kontrolka WiFi.",
-    "CL_DV_OV_default_cooking_intensity": "VÝCHOZÍ INTENZITA VAŘENÍ"
+    "CL_DV_OV_default_cooking_intensity": "VÝCHOZÍ INTENZITA VAŘENÍ",
+    "CL_DV_HOB_residual_heat_title_pop": "Zbytkové teplo",
+    "CL_DV_HOB_residual_heat_content_pop": "Varná zóna je stále horká. Dávejte pozor, abyste se nedotkli horké varné zóny a nepokládejte na ni žádné předměty citlivé na teplo.",
+    "CL_DV_HOB_hood_mode_setting": "Nastavení režimu kapoty",
+    "CL_DV_HOB_refresh_mode_setting": "Nastavení režimu obnovení",
+    "CL_DV_HOB_grease_filter_profile": "Možnosti profilu tukového filtru",
+    "CL_DV_HOB_hood_mode_setting_content": "Nastavte režim odsavače par. Když je odsavač par v automatickém režimu, spustí se, jakmile začne proces vaření.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Pokud je automatický režim vypnutý, režim bude manuální.",
+    "CL_DV_HOB_automatic_mode": "Automatický režim",
+    "CL_DV_HOB_refresh_setting_hint": "Pokud je zapnutý režim osvěžení, spotřebič automaticky začne používat režim obnovení, když je digestoř aktivní.",
+    "CL_DV_HOB_grease_filter_profile_content": "Nastavte životnost tukového filtru. \n\n P1 se používá hlavně k varu a lehkému smažení. P2 se používá pro vyvážené vaření a průměrné smažení. P3 se používá pro těžké smažení.",
+    "CL_DV_HOB_hood_mode_manual": "Manuál",
+    "CL_DV_HOB_remove_accessory_content": "Opravdu chcete toto příslušenství odebrat?",
+    "CL_DV_HOB_remove_accessory_tips": "po odebrání příslušenství již nebudete dostávat aktualizace firmwaru.",
+    "CL_DV_HOB_clean_filter": "VYČISTIL JSTE FILTR?",
+    "CL_DV_HOB_clean_filter_content": "Po vyčištění filtru resetujte časovač.",
+    "CL_DV_HOB_more_update": "xx další aktualizace",
+    "CL_DV_TD_child_lock_tip": "Dětská pojistka deaktivuje tlačítka na ovládacím panelu spotřebiče, aby děti nemohly náhodně spustit nebo změnit cyklus. "
 }
