--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "қашан ## болады @@ **",
     "centigrade_key": "##℃",
     "fahrenheit_key": "##°F",
-    "enter_city_key": "Қала енгізіңіз…",
+    "enter_city_key": "Қаланы іздеу",
     "add_key": "Қосу",
     "select_logic_relation_ship": "Логикалық байланысты таңдаңыз",
     "no_scene_key": "сахна жоқ",
@@ -4003,5 +4003,22 @@
     "CL_DV_OV_check_to_confirm": "Растау үшін пешті тексеріңіз.",
     "CL_CF_CO_buy": "Сатып алу",
     "CL_CF_CS_window_ac_step_2": "«Қосылу» түймесін шамамен 6 секунд басып тұрыңыз немесе қашықтан басқару құралын ресиверге бағыттаңыз және дисплейде «77» көрсетілгенше немесе WiFi шамы жыпылықтай бастағанша «айналу» түймесін 6 рет басыңыз.",
-    "CL_DV_OV_default_cooking_intensity": "ӘДІМДІ ПІСІРУ КЕРЕКТІЛІГІ"
+    "CL_DV_OV_default_cooking_intensity": "ӘДІМДІ ПІСІРУ КЕРЕКТІЛІГІ",
+    "CL_DV_HOB_residual_heat_title_pop": "Қалдық жылу",
+    "CL_DV_HOB_residual_heat_content_pop": "Пісіру алаңы әлі ыстық. Ыстық пісіру алаңын ұстамаңыз немесе оған ыстыққа сезімтал заттарды қоймаңыз.",
+    "CL_DV_HOB_hood_mode_setting": "Сорғыш режимінің параметрлері",
+    "CL_DV_HOB_refresh_mode_setting": "Жаңарту режимінің параметрлері",
+    "CL_DV_HOB_grease_filter_profile": "Май сүзгісі профилінің опциялары",
+    "CL_DV_HOB_hood_mode_setting_content": "Сорғыштың режимін орнатыңыз. Сорғыш автоматты режимде болғанда, ол пісіру процесі басталғаннан кейін бірден басталады.",
+    "CL_DV_HOB_hood_mode_setting_hint": "Автоматты режим өшірулі болса, режим қолмен болады.",
+    "CL_DV_HOB_automatic_mode": "Автоматты режим",
+    "CL_DV_HOB_refresh_setting_hint": "Жаңарту режимі қосулы болса, сорғыш белсенді кезде құрылғы Жаңарту режимін автоматты түрде пайдалана бастайды.",
+    "CL_DV_HOB_grease_filter_profile_content": "Май сүзгісінің ұзақ қызмет ету мерзімін орнатыңыз. \n\n Р1 негізінен қайнату және жеңіл қуыру үшін қолданылады. P2 теңдестірілген қайнату және орташа қуыру үшін қолданылады. P3 қатты қуыру үшін қолданылады.",
+    "CL_DV_HOB_hood_mode_manual": "Нұсқаулық",
+    "CL_DV_HOB_remove_accessory_content": "Бұл аксессуарды шынымен жойғыңыз келе ме?",
+    "CL_DV_HOB_remove_accessory_tips": "аксессуарды алып тастағанда, ол үшін микробағдарлама жаңартуларын алмайсыз.",
+    "CL_DV_HOB_clean_filter": "СІЗГІ ТАЗАЛАУДЫҢЫЗ БА?",
+    "CL_DV_HOB_clean_filter_content": "Сүзгіні тазалағаннан кейін таймерді қалпына келтіріңіз.",
+    "CL_DV_HOB_more_update": "xx қосымша жаңарту",
+    "CL_DV_TD_child_lock_tip": "Балалардан қорғау құрылғысы балалардың циклді байқаусызда бастауын немесе өзгертуін болдырмау үшін құрылғының басқару панеліндегі түймелерді өшіреді. "
 }
