--- a/language/i18n_ku_TR.json
+++ b/language/i18n_ku_TR.json
@@ -3374,7 +3374,7 @@
     "automation_condition_des_is_key": "",
     "centigrade_key": "",
     "fahrenheit_key": "",
-    "enter_city_key": "",
+    "enter_city_key": "Lêgerîn şar",
     "add_key": "",
     "select_logic_relation_ship": "",
     "no_scene_key": "",
@@ -4003,5 +4003,22 @@
     "CL_DV_OV_check_to_confirm": "",
     "CL_CF_CO_buy": "Kirrîn",
     "CL_CF_CS_window_ac_step_2": "",
-    "CL_DV_OV_default_cooking_intensity": ""
+    "CL_DV_OV_default_cooking_intensity": "",
+    "CL_DV_HOB_residual_heat_title_pop": "",
+    "CL_DV_HOB_residual_heat_content_pop": "",
+    "CL_DV_HOB_hood_mode_setting": "",
+    "CL_DV_HOB_refresh_mode_setting": "",
+    "CL_DV_HOB_grease_filter_profile": "",
+    "CL_DV_HOB_hood_mode_setting_content": "",
+    "CL_DV_HOB_hood_mode_setting_hint": "",
+    "CL_DV_HOB_automatic_mode": "",
+    "CL_DV_HOB_refresh_setting_hint": "",
+    "CL_DV_HOB_grease_filter_profile_content": "",
+    "CL_DV_HOB_hood_mode_manual": "",
+    "CL_DV_HOB_remove_accessory_content": "",
+    "CL_DV_HOB_remove_accessory_tips": "",
+    "CL_DV_HOB_clean_filter": "",
+    "CL_DV_HOB_clean_filter_content": "",
+    "CL_DV_HOB_more_update": "",
+    "CL_DV_TD_child_lock_tip": ""
 }
